--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -12,7 +12,7 @@ jobs:
                       operating-system: ubuntu-latest
                 exclude:
                     - node-version:
-                      operating-systen: windows-latest        
+                      operating-system: windows-latest        
         runs-on: ${{ matrix.operating-system }}
         steps:
             - name: Get code
